--- a/html/alafrancaise.html
+++ b/html/alafrancaise.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>À la française</title>
     <script src="https://kit.fontawesome.com/67673b6d3e.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/reset.scss">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
