--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oh My Food</title>
     <script src="https://kit.fontawesome.com/67673b6d3e.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/reset.scss">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
