logo footer + animation hover

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <figure>
-            <img src="./images/logo/ohmyfood@2x.svg" alt="logo" />
+            <img src="./images/logo/ohmyfood.png" alt="logo" />
         </figure>
         <div class="header__location">
             <i class="fa-solid fa-location-dot"></i>
@@ -121,8 +121,8 @@
             </article>
         </section>
     </main>
-    <footer>
-        <img src="./images/logo/ohmyfood.png" alt="logo">
+    <footer class="footer__index">
+        <img src="./images/logo/ohmyfood@2x.svg" alt="logo">
         <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
         <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
         <a href="#">Mentions légales</a>
