heart animation in progress

--- a/html/lapalettedugout.html
+++ b/html/lapalettedugout.html
@@ -21,7 +21,10 @@
         <section class="menu__restaurant">
             <h1>
                 La palette du goût
-                <i class="fa-regular fa-heart"></i>
+                <div class="heart__checkbox">
+                    <i class="fa-regular fa-heart heart--empty"></i>
+                    <i class="fas fa-heart heart--fill"></i>
+                </div>
             </h1>
             <h2>
                 ENTRÉES
@@ -31,9 +34,9 @@
                     <h3>Fricassée d'escargot</h3>
                     <p>
                         Au piment d'Espelette
-                        <span>25€</span>
                     </p>
                 </div>
+                <span>25€</span>
                 <div class="card__animation">
                     <i class="fa-regular fa-circle-check"></i>
                 </div>
