animation heart done

--- a/html/lapalettedugout.html
+++ b/html/lapalettedugout.html
@@ -22,6 +22,7 @@
             <h1>
                 La palette du goût
                 <div class="heart__checkbox">
+                    <input type="checkbox">
                     <i class="fa-regular fa-heart heart--empty"></i>
                     <i class="fas fa-heart heart--fill"></i>
                 </div>
