header landing page almost 2/3 complete

--- a/html/lapalettedugout.html
+++ b/html/lapalettedugout.html
@@ -30,15 +30,15 @@
             <h2>
                 ENTRÉES
             </h2>
-            <button class="btn__dishe">
-                <div class="text">
+            <button class="dishe__btn">
+                <div class="dishe__text">
                     <h3>Fricassée d'escargot</h3>
                     <p>
                         Au piment d'Espelette
                     </p>
                 </div>
-                <span>25€</span>
-                <div class="card__animation">
+                <span class="dishe__price">25€</span>
+                <div class="dishe__animation">
                     <i class="fa-regular fa-circle-check"></i>
                 </div>
                 
