animation menu in progress

--- a/index.html
+++ b/index.html
@@ -39,27 +39,27 @@
                 Fonctionnement
             </h2>
             <div>
-                <a href="#">
-                    <button class="btn">
+                <button class="btn">
+                    <a href="#" class="btn__link">
                         <p class="btn__order">1</p>
                         <i class="fa-solid fa-mobile-screen"></i>
                         <p class="btn__text">Choisissez votre restaurant</p>
-                    </button> 
-                </a>
-                <a href="#">
-                    <button class="btn">
+                    </a>
+                </button> 
+                <button class="btn">
+                    <a href="#" class="btn__link">
                         <p class="btn__order">2</p>
                         <i class="fa-solid fa-list"></i>
                         <p class="btn__text">Composez votre menu</p> 
-                    </button>
-                </a>
-                <a href="#">
-                    <button class="btn">
+                    </a> 
+                </button>
+                <button class="btn">
+                    <a href="#" class="btn__link">
                         <p class="btn__order">3</p>
                         <i class="fa-solid fa-store"></i>
                         <p class="btn__text">Dégustez au restaurant</p>
-                    </button>
-                </a>
+                    </a>
+                </button>
             </div>
         </section>
         <section id="restaurants">
