--- a/html/lapalettedugout.html
+++ b/html/lapalettedugout.html
@@ -32,12 +32,16 @@
             </h2>
             <button class="dishe__btn">
                 <div class="dishe__text">
-                    <h3>Fricassée d'escargot</h3>
-                    <p>
-                        Au piment d'Espelette
-                    </p>
+                    <div>
+                        <h3>Fricassée d'escargot</h3>
+                        <p>
+                            Au piment d'Espelette
+                        </p>
+                    </div>    
+                    <div class="dishe__price">
+                        <span>25€</span>
+                    </div>
                 </div>
-                <span class="dishe__price">25€</span>
                 <div class="dishe__animation">
                     <i class="fa-regular fa-circle-check"></i>
                 </div>
