animation menu page

--- a/html/lapalettedugout.html
+++ b/html/lapalettedugout.html
@@ -30,7 +30,7 @@
             <h2>
                 <span class="title__underline">ENTR</span>ÉES
             </h2>
-            <button class="dishe">
+            <button class="dishe button--1">
                 <div class="dishe__description">
                     <div class="dishe__text">
                         <p><strong>Fricassée d'escargot</strong></p>
@@ -44,7 +44,7 @@
                     <i class="fas fa-check"></i>
                 </div>
             </button>
-            <button class="dishe">
+            <button class="dishe button--2">
                 <div class="dishe__description">
                     <div class="dishe__text">
                         <p><strong>Foie gras de canard mi-cuit</strong></p>
@@ -58,7 +58,7 @@
                     <i class="fas fa-check"></i>
                 </div>
             </button>
-            <button class="dishe">
+            <button class="dishe button--3">
                 <div class="dishe__description">
                     <div class="dishe__text">
                         <p><strong>Oeuf au plat</strong></p>
@@ -75,7 +75,7 @@
             <h2>
                 <span class="title__underline">PLAT</span>S
             </h2>
-            <button class="dishe">
+            <button class="dishe button--4">
                 <div class="dishe__description">
                     <div class="dishe__text">
                         <p><strong>Filet de boeuf aux herbes</strong></p>
@@ -89,7 +89,7 @@
                     <i class="fas fa-check"></i>
                 </div>
             </button>
-            <button class="dishe">
+            <button class="dishe button--5">
                 <div class="dishe__description">
                     <div class="dishe__text">
                         <p><strong>Parmentier de queue de boeuf</strong></p>
@@ -103,7 +103,7 @@
                     <i class="fas fa-check"></i>
                 </div>
             </button>
-            <button class="dishe">
+            <button class="dishe button--6">
                 <div class="dishe__description">
                     <div class="dishe__text">
                         <p><strong>Filet de turbot</strong></p>
@@ -120,7 +120,7 @@
              <h2>
                 <span class="title__underline">DESS</span>ERTS
             </h2>
-            <button class="dishe">
+            <button class="dishe button--7">
                 <div class="dishe__description">
                     <div class="dishe__text">
                         <p><strong>Paris-Brest</strong></p>
@@ -134,7 +134,7 @@
                     <i class="fas fa-check"></i>
                 </div>
             </button>
-            <button class="dishe">
+            <button class="dishe button--8">
                 <div class="dishe__description">
                     <div class="dishe__text">
                         <p><strong>Macaron au chocolat d'exception</strong></p>
@@ -148,7 +148,7 @@
                     <i class="fas fa-check"></i>
                 </div>
             </button>
-            <button class="dishe">
+            <button class="dishe button--9">
                 <div class="dishe__description">
                     <div class="dishe__text">
                         <p><strong>Mousse au chocolat</strong></p>
