landing page done

--- a/html/lapalettedugout.html
+++ b/html/lapalettedugout.html
@@ -30,7 +30,7 @@
             <h2>
                 <span class="title__underline">ENTR</span>ÉES
             </h2>
-            <button class="dishe button--1">
+            <button class="dishe .button button--1">
                 <div class="dishe__description">
                     <div class="dishe__text">
                         <p><strong>Fricassée d'escargot</strong></p>
