--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h2>
                 Fonctionnement
             </h2>
-            <div>
+            <div class="navbar">
                 <button class="btn">
                     <a href="#" class="btn__link">
                         <p class="btn__order">1</p>
@@ -70,6 +70,9 @@
                 <a href="./html/lapalettedugout.html">
                     <figure>
                         <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="un plat de restaurant">
+                        <aside class="card__flag">
+                            <p>Nouveau</p>
+                        </aside>
                         <figcaption>
                             <h3>
                                 La palette du goût
@@ -77,7 +80,11 @@
                             <p>
                                 Ménilmontant
                             </p>
-                            <i class="fa-regular fa-heart"></i>
+                            <div class="heart__checkbox">
+                                <input type="checkbox">
+                                <i class="fa-regular fa-heart heart--empty"></i>
+                                <i class="fas fa-heart heart--fill"></i>
+                            </div>
                         </figcaption>
                     </figure>
                 </a>
@@ -86,6 +93,9 @@
                 <a href="./html/lanoteenchantee.html">
                     <figure>
                         <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="un plat de restaurant">
+                        <aside class="card__flag">
+                            <p>Nouveau</p>
+                        </aside>
                         <figcaption>
                             <h3>
                                 La note enchantée
@@ -93,7 +103,11 @@
                             <p>
                                 Charonne
                             </p>
-                            <i class="fa-regular fa-heart"></i>
+                            <div class="heart__checkbox">
+                                <input type="checkbox">
+                                <i class="fa-regular fa-heart heart--empty"></i>
+                                <i class="fas fa-heart heart--fill"></i>
+                            </div>
                         </figcaption>
                     </figure>
                 </a>
@@ -102,6 +116,9 @@
                 <a href="./html/alafrancaise.html">
                     <figure>
                         <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="un plat de restaurant">
+                        <aside class="card__flag">
+                            <p>Nouveau</p>
+                        </aside>
                         <figcaption>
                             <h3>
                                 À la française
@@ -109,7 +126,11 @@
                             <p>
                                 Cité Rouge
                             </p>
-                            <i class="fa-regular fa-heart"></i>
+                            <div class="heart__checkbox">
+                                <input type="checkbox">
+                                <i class="fa-regular fa-heart heart--empty"></i>
+                                <i class="fas fa-heart heart--fill"></i>
+                            </div>
                         </figcaption>
                     </figure>
                 </a>
@@ -118,6 +139,9 @@
                 <a href="./html/ledelicedessens.html">
                     <figure>
                         <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="un plat de restaurant">
+                        <aside class="card__flag">
+                            <p>Nouveau</p>
+                        </aside>
                         <figcaption>
                             <h3>
                                 Le délice des sens
@@ -125,7 +149,11 @@
                             <p>
                                 Folie-Méricourt
                             </p>
-                            <i class="fa-regular fa-heart"></i>
+                            <div class="heart__checkbox">
+                                <input type="checkbox">
+                                <i class="fa-regular fa-heart heart--empty"></i>
+                                <i class="fas fa-heart heart--fill"></i>
+                            </div>
                         </figcaption>
                     </figure>
                 </a>
