--- a/html/alafrancaise.html
+++ b/html/alafrancaise.html
@@ -10,108 +10,166 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header>
-        <img src="../images/logo/ohmyfood@2x.svg" alt="logo">
+    <header class="header__restaurant">
         <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <img src="../images/logo/ohmyfood.png" alt="logo">
     </header>
-    <main>
-        <figure>
+    <main class="main__restaurant">
+        <figure class="img__landing">
             <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="un plat de restaurant">
         </figure>
-        <section>
+        <section class="menu__restaurant">
             <h1>
                 À la française
-                <i class="fa-regular fa-heart"></i>
+                <div class="heart__checkbox">
+                    <input type="checkbox">
+                    <i class="fa-regular fa-heart heart--empty"></i>
+                    <i class="fas fa-heart heart--fill"></i>
+                </div>
             </h1>
             <h2>
-                ENTRÉES
+                <span class="title__underline">ENTR</span>ÉES
             </h2>
-            <article>
-                <h3>Tartare de poulpe acidulé</h3>
-                <p>
-                    Aux zestes d'orange
-                    <span>25€</span>
-                </p>
-                <i class="fa-regular fa-circle-check"></i>
-            </article>
-            <article>
-                <h3>Velouté de légumes d'antan</h3>
-                <p>
-                    Carotte, panais, topinambour
-                    <span>35€</span>
-                </p>
-                <i class="fa-regular fa-circle-check"></i>
-            </article>
-            <article>
-                <h3>Soupe à l'oignon</h3>
-                <p>
-                    Revisitée
-                    <span>20€</span>
-                </p>
-                <i class="fa-regular fa-circle-check"></i>
-            </article>
+            <button class="dishe button button--1">
+                <div class="dishe__description">
+                    <div class="dishe__text">
+                        <p><strong>Tartare de poulpe acidulé</strong></p>
+                        <p>Aux zestes d'orange</p>
+                    </div>
+                    <div class="dishe__price">
+                        <span><strong>25€</strong></span>
+                    </div>
+                </div>
+                <div class="dishe__icone">
+                    <i class="fas fa-check"></i>
+                </div>
+            </button>
+            <button class="dishe button button--2">
+                <div class="dishe__description">
+                    <div class="dishe__text">
+                        <p><strong>Velouté de légumes d'antan</strong></p>
+                        <p>Carotte, panais, topinambour</p>
+                    </div>
+                    <div class="dishe__price">
+                        <span><strong>35€</strong></span>
+                    </div>
+                </div>
+                <div class="dishe__icone">
+                    <i class="fas fa-check"></i>
+                </div>
+            </button>
+            <button class="dishe button button--3">
+                <div class="dishe__description">
+                    <div class="dishe__text">
+                        <p><strong>Soupe à l'oignon</strong></p>
+                        <p>Revisitée</p>
+                    </div>
+                    <div class="dishe__price">
+                        <span><strong>20€</strong></span>
+                    </div>
+                </div>
+                <div class="dishe__icone">
+                    <i class="fas fa-check"></i>
+                </div>
+            </button>
             <h2>
-                PLATS
+                <span class="title__underline">PLAT</span>S
             </h2>
-            <article>
-                <h3>Coquilles Saint-Jacques</h3>
-                <p>
-                    Accompagnées d'une purée de panais
-                    <span>40€</span>
-                </p>
-                <i class="fa-regular fa-circle-check"></i>
-            </article>
-            <article>
-                <h3>Magret de canard</h3>
-                <p>
-                    Et parmentier de pommes de terre
-                    <span>35€</span>
-                </p>
-                <i class="fa-regular fa-circle-check"></i>
-            </article>
-            <article>
-                <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-                <p>
-                    Sur son lit de gnocchis aux légumes
-                    <span>44€</span>
-                </p>
-                <i class="fa-regular fa-circle-check"></i>
-            </article>
+            <button class="dishe button button--4">
+                <div class="dishe__description">
+                    <div class="dishe__text">
+                        <p><strong>Coquilles Saint-Jacques</strong></p>
+                        <p>Accompagnées d'une purée de panais</p>
+                    </div>
+                    <div class="dishe__price">
+                        <span><strong>40€</strong></span>
+                    </div>
+                </div>
+                <div class="dishe__icone">
+                    <i class="fas fa-check"></i>
+                </div>
+            </button>
+            <button class="dishe button button--5">
+                <div class="dishe__description">
+                    <div class="dishe__text">
+                        <p><strong>Magret de canard</strong></p>
+                        <p>Et parmentier de pommes de terre</p>
+                    </div>
+                    <div class="dishe__price">
+                        <span><strong>35€</strong></span>
+                    </div>
+                </div>
+                <div class="dishe__icone">
+                    <i class="fas fa-check"></i>
+                </div>
+            </button>
+            <button class="dishe button button--6">
+                <div class="dishe__description">
+                    <div class="dishe__text">
+                        <p><strong>Pigeonneau d’Ille-et-Vilaine</strong></p>
+                        <p>Sur son lit de gnocchis aux légumes</p>
+                    </div>
+                    <div class="dishe__price">
+                        <span><strong>44€</strong></span>
+                    </div>
+                </div>
+                <div class="dishe__icone">
+                    <i class="fas fa-check"></i>
+                </div>
+            </button>
             <h2>
-                DESSERTS
+                <span class="title__underline">DESS</span>ERTS
             </h2>
-            <article>
-                <h3>Pétales de violettes glacés</h3>
-                <p>
-                    Et purée de noisettes
-                    <span>18€</span>
-                </p>
-                <i class="fa-regular fa-circle-check"></i>
-            </article>
-            <article>
-                <h3>Fondant au chocolat</h3>
-                <p>
-                    Revisité
-                    <span>22€</span>
-                </p>
-                <i class="fa-regular fa-circle-check"></i>
-            </article>
-            <article>
-                <h3>Millefeuille croustillant</h3>
-                <p>
-                    Myrtilles et pâte d’amande
-                    <span>23€</span>
-                </p>
-                <i class="fa-regular fa-circle-check"></i>
-            </article>
+            <button class="dishe button button--7">
+                <div class="dishe__description">
+                    <div class="dishe__text">
+                        <p><strong>Pétales de violettes glacés</strong></p>
+                        <p>Et purée de noisettes</p>
+                    </div>
+                    <div class="dishe__price">
+                        <span><strong>18€</strong></span>
+                    </div>
+                </div>
+                <div class="dishe__icone">
+                    <i class="fas fa-check"></i>
+                </div>
+            </button>
+            <button class="dishe button button--8">
+                <div class="dishe__description">
+                    <div class="dishe__text">
+                        <p><strong>Fondant au chocolat</strong></p>
+                        <p>Revisité</p>
+                    </div>
+                    <div class="dishe__price">
+                        <span><strong>22€</strong></span>
+                    </div>
+                </div>
+                <div class="dishe__icone">
+                    <i class="fas fa-check"></i>
+                </div>
+            </button>
+            <button class="dishe button button--9">
+                <div class="dishe__description">
+                    <div class="dishe__text">
+                        <p><strong>Millefeuille croustillant</strong></p>
+                        <p>Myrtilles et pâte d’amande</p>
+                    </div>
+                    <div class="dishe__price">
+                        <span><strong>23€</strong></span>
+                    </div>
+                </div>
+                <div class="dishe__icone">
+                    <i class="fas fa-check"></i>
+                </div>
+            </button>
         </section>
         <section>
-            <a href="#">Commander</a>
+            <a href="#" class="order__link">Commander</a>
         </section>
     </main>
-    <footer>
-        <img src="../images/logo/ohmyfood.png" alt="logo">
-        <a href="#"><i class="fa-solid fa-utensils"></i>Proposer unrestaurant</a>
+    <footer class="footer__pages">
+        <img src="../images/logo/ohmyfood@2x.svg" alt="logo">
+        <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
         <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
         <a href="#">Mentions légales</a>
         <a href="mailto:ountouch@gmail.com">Contact</a>
