--- a/html/lanoteenchantee.html
+++ b/html/lanoteenchantee.html
@@ -10,116 +10,180 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header>
-        <img src="../images/logo/ohmyfood@2x.svg" alt="logo">
+    <header class="header__restaurant">
         <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <img src="../images/logo/ohmyfood.png" alt="logo">
     </header>
-    <main>
-        <figure>
+    <main class="main__restaurant">
+        <figure class="img__landing">
             <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="un plat de restaurant">
         </figure>
-        <section>
+        <section class="menu__restaurant">
             <h1>
                 La note enchantée
-                <i class="fa-regular fa-heart"></i>
+                <div class="heart__checkbox">
+                    <input type="checkbox">
+                    <i class="fa-regular fa-heart heart--empty"></i>
+                    <i class="fas fa-heart heart--fill"></i>
+                </div>
             </h1>
             <h2>
-                ENTRÉES
+                <span class="title__underline">ENTR</span>ÉES
             </h2>
-            <article>
-                <h3>Ravioles de foie gras</h3>
-                <p>
-                    Accompagnés de leur crème à la truffe
-                    <span>25€</span>
-                </p>
-                <i class="fa-regular fa-circle-check"></i>
-            </article>
-            <article>
-                <h3>Caviar osciètre</h3>
-                <p>
-                    Sur blini à la farine de blé noir
-                    <span>35€</span>
-                </p>
-                <i class="fa-regular fa-circle-check"></i>
-            </article>
-            <article>
-                <h3>Homard et espuma de potiron</h3>
-                <p>
-                    Mariné aux zestes d'orange
-                    <span>20€</span>
-                </p>
-                <i class="fa-regular fa-circle-check"></i>
-            </article>
-            <article>
-                <h3>Foie gras de canard cuit entier</h3>
-                <p>
-                    Confiture de figue et pain toasté
-                    <span>35€</span>
-                </p>
-                <i class="fa-regular fa-circle-check"></i>
-            </article>
+            <button class="dishe button button--1">
+                <div class="dishe__description">
+                    <div class="dishe__text">
+                        <p><strong>Ravioles de foie gras</strong></p>
+                        <p>Accompagnés de leur crème à la truffe</p>
+                    </div>
+                    <div class="dishe__price">
+                        <span><strong>25€</strong></span>
+                    </div>
+                </div>
+                <div class="dishe__icone">
+                    <i class="fas fa-check"></i>
+                </div>
+            </button>
+            <button class="dishe button button--2">
+                <div class="dishe__description">
+                    <div class="dishe__text">
+                        <p><strong>Caviar osciètre</strong></p>
+                        <p>Sur blini à la farine de blé noir</p>
+                    </div>
+                    <div class="dishe__price">
+                        <span><strong>35€</strong></span>
+                    </div>
+                </div>
+                <div class="dishe__icone">
+                    <i class="fas fa-check"></i>
+                </div>
+            </button>
+            <button class="dishe button button--3">
+                <div class="dishe__description">
+                    <div class="dishe__text">
+                        <p><strong>Homard et espuma de potiron</strong></p>
+                        <p>Mariné aux zestes d'orange</p>
+                    </div>
+                    <div class="dishe__price">
+                        <span><strong>20€</strong></span>
+                    </div>
+                </div>
+                <div class="dishe__icone">
+                    <i class="fas fa-check"></i>
+                </div>
+            </button>
+            <button class="dishe button button--4">
+                <div class="dishe__description">
+                    <div class="dishe__text">
+                        <p><strong>Foie gras de canard cuit entier</strong></p>
+                        <p>Confiture de figue et pain toasté</p>
+                    </div>
+                    <div class="dishe__price">
+                        <span><strong>35€</strong></span>
+                    </div>
+                </div>
+                <div class="dishe__icone">
+                    <i class="fas fa-check"></i>
+                </div>
+            </button>
             <h2>
-                PLATS
+                <span class="title__underline">PLAT</span>S
             </h2>
-            <article>
-                <h3>Noix de coquilles Saint-Jacques</h3>
-                <p>
-                    Sur lit de purée de céleri-rave
-                    <span>40€</span>
-                </p>
-                <i class="fa-regular fa-circle-check"></i>
-            </article>
-            <article>
-                <h3>Langoustine poêlée</h3>
-                <p>
-                    Purée de patate douce
-                    <span>35€</span>
-                </p>
-                <i class="fa-regular fa-circle-check"></i>
-            </article>
-            <article>
-                <h3>Mijoté de queue de boeuf</h3>
-                <p>
-                    Et riz sauvage aux zestes de citron
-                    <span>44€</span>
-                </p>
-                <i class="fa-regular fa-circle-check"></i>
-            </article>
-            <h2>
-                DESSERTS
+            <button class="dishe button button--5">
+                <div class="dishe__description">
+                    <div class="dishe__text">
+                        <p><strong>Noix de coquilles Saint-Jacques</strong></p>
+                        <p>Sur lit de purée de céleri-rave</p>
+                    </div>
+                    <div class="dishe__price">
+                        <span><strong>40€</strong></span>
+                    </div>
+                </div>
+                <div class="dishe__icone">
+                    <i class="fas fa-check"></i>
+                </div>
+            </button>
+            <button class="dishe button button--6">
+                <div class="dishe__description">
+                    <div class="dishe__text">
+                        <p><strong>Langoustine poêlée</strong></p>
+                        <p>Purée de patate douce</p>
+                    </div>
+                    <div class="dishe__price">
+                        <span><strong>35€</strong></span>
+                    </div>
+                </div>
+                <div class="dishe__icone">
+                    <i class="fas fa-check"></i>
+                </div>
+            </button>
+            <button class="dishe button button--7">
+                <div class="dishe__description">
+                    <div class="dishe__text">
+                        <p><strong>Mijoté de queue de boeuf</strong></p>
+                        <p>Et riz sauvage aux zestes de citron</p>
+                    </div>
+                    <div class="dishe__price">
+                        <span><strong>44€</strong></span>
+                    </div>
+                </div>
+                <div class="dishe__icone">
+                    <i class="fas fa-check"></i>
+                </div>
+            </button>
+             <h2>
+                <span class="title__underline">DESS</span>ERTS
             </h2>
-            <article>
-                <h3>Macaron noisette et chocolat</h3>
-                <p>
-                    Glace au caramel brun et sel de Guérande
-                    <span>18€</span>
-                </p>
-                <i class="fa-regular fa-circle-check"></i>
-            </article>
-            <article>
-                <h3>Baba au rhum revisité</h3>
-                <p>
-                    Avec son coulis de citron
-                    <span>22€</span>
-                </p>
-                <i class="fa-regular fa-circle-check"></i>
-            </article>
-            <article>
-                <h3>Tarte au citron meringuée</h3>
-                <p>
-                    Déstructurée
-                    <span>23€</span>
-                </p>
-                <i class="fa-regular fa-circle-check"></i>
-            </article>
+            <button class="dishe button button--8">
+                <div class="dishe__description">
+                    <div class="dishe__text">
+                        <p><strong>Macaron noisette et chocolat</strong></p>
+                        <p>Glace au caramel brun et sel de Guérande</p>
+                    </div>
+                    <div class="dishe__price">
+                        <span><strong>18€</strong></span>
+                    </div>
+                </div>
+                <div class="dishe__icone">
+                    <i class="fas fa-check"></i>
+                </div>
+            </button>
+            <button class="dishe button button--9">
+                <div class="dishe__description">
+                    <div class="dishe__text">
+                        <p><strong>Baba au rhum revisité</strong></p>
+                        <p>Avec son coulis de citron</p>
+                    </div>
+                    <div class="dishe__price">
+                        <span><strong>22€</strong></span>
+                    </div>
+                </div>
+                <div class="dishe__icone">
+                    <i class="fas fa-check"></i>
+                </div>
+            </button>
+            <button class="dishe button button--10">
+                <div class="dishe__description">
+                    <div class="dishe__text">
+                        <p><strong>Tarte au citron meringuée</strong></p>
+                        <p>Déstructurée</p>
+                    </div>
+                    <div class="dishe__price">
+                        <span><strong>23€</strong></span>
+                    </div>
+                </div>
+                <div class="dishe__icone">
+                    <i class="fas fa-check"></i>
+                </div>
+            </button>
         </section>
         <section>
-            <a href="#">Commander</a>
+            <a href="#" class="order__link">Commander</a>
         </section>
     </main>
-    <footer>
-        <img src="../images/logo/ohmyfood.png" alt="logo">
-        <a href="#"><i class="fa-solid fa-utensils"></i>Proposer unrestaurant</a>
+    <footer class="footer__pages">
+        <img src="../images/logo/ohmyfood@2x.svg" alt="logo">
+        <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
         <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
         <a href="#">Mentions légales</a>
         <a href="mailto:ountouch@gmail.com">Contact</a>
